--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,7 +1,135 @@
-@mainColor:#00f521;
+* {
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+}
+
+ul,
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+
 
 body {
- color: @mainColor;
- background-color:rgb(0, 85, 34);
- text-transform: uppercase;
+    overflow: hidden;
+    background-color: #f2f2f2;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    
+}
+
+.header__top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0px ;
+    overflow: hidden;
+    width: 100%;
+    height: 35px;
+    position: fixed;
+    top: 0px;
+    background-color: #282828;
+
+}
+
+.header__top a {
+
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+
+}
+
+.header__logo {
+    position: fixed;
+    top: -2px;
+    float: left;
+    text-align: center;
+    padding: 0px 0px;
+    text-align: left;
+
+}
+
+.header__content {
+
+    flex-direction: column;
+    height: 100%;
+    text-align: none;
+    width: 165px;
+    font-size: 18px;
+    padding: 80px 20px;
+    overflow: hidden;
+    top:-500px;
+    background-color: #373737;
+
+}
+
+.header__content a {
+    padding: 20px 0px;
+    text-decoration: none;
+    font-size: 12px;
+    color: #f2f2f2;
+    display: block;
+    text-align: center;
+    top:-10px;
+    position: none;
+}
+
+
+.header__c{
+    
+    font-size: 10px;
+    position: none;
+
+    float: right;
+    text-align: center;
+    padding: 0px 0px;
+    text-align: center;
+    position:fixed;
+    right:250px; top:0px;
+  
+   
+}
+.header__c a{
+    color: #f2f2f2;
+    left:150px
+}
+.usd{
+    
+    
+    float:right;
+    right:300px;
+    position: none;
+    
+    padding: 0px 200px;
+    
+    
+}
+.usd a{
+   
+    font-size: 9px;
+    color:#8d8c8c;
+}
+.hello{
+    font-size: 10px;
+    right:125px;
+    position:fixed;
 }
